@@ -2,7 +2,7 @@
 
 luainit.w
 
-Copyright 2006-2018 Taco Hoekwater <taco@@luatex.org>
+Copyright 2006-2019 Taco Hoekwater <taco@@luatex.org>
 
 This file is part of LuaTeX.
 
@@ -425,7 +425,7 @@ static void parse_options(int ac, char **av)
                  "the terms of the GNU General Public License, version 2 or (at your option)\n"
                  "any later version. For more information about these matters, see the file\n"
                  "named COPYING and the LuaTeX source.\n\n"
-                 "LuaTeX is Copyright 2018 Taco Hoekwater and the LuaTeX Team.\n");
+                 "LuaTeX is Copyright 2019 Taco Hoekwater and the LuaTeX Team.\n");
             /* *INDENT-ON* */
             uexit(0);
         } else if (ARGUMENT_IS("credits")) {
